--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -48,8 +48,9 @@ table {
 }
 a {
 	text-decoration: none;
+	color: white;
 }
 a:visited {
 	text-decoration: none;
-	color: inherit;
+	color: white;
 }
