--- a/über-frøsch/css/index.css
+++ b/über-frøsch/css/index.css
@@ -18,9 +18,14 @@ main {
 .cat > img {
 	width: 100%;
 	height: auto;
+	margin-bottom: 20px;
 }
 
 main > h1 {
 	font-size: 2rem;
 	margin-bottom: 70px;
+}
+
+.border-end {
+	transform: scaleY(-1)
 }
