--- a/uber-frosch/css/login.css
+++ b/uber-frosch/css/login.css
@@ -1,3 +1,22 @@
 form {
 	margin-bottom: 20px;
 }
+
+.popup {
+	position: absolute;
+	top: 50px;
+	right: 50px;
+	border: 4px solid white;
+	width: 400px;
+	height: 100px;
+	border-radius: 25px;
+	text-align: center;
+	display: flex;
+	justify-content: center; /* Align horizontal */
+	align-items: center; /* Align vertical */
+}
+
+.popup h1 {
+	margin: auto;
+	vertical-align: center;
+}
