--- a/uber-frosch/css/style.css
+++ b/uber-frosch/css/style.css
@@ -4,6 +4,7 @@ body {
 	color: white;
 	background-color: black;
 	cursor: url("../images/cursors/metal.webp"), auto;
+	position: relative;
 }
 
 nav {
